added logo to top nav

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -14,6 +14,7 @@ $green-light: #13736a;
 $green-dark: #082e2a;
 $green-extra-dark: #072926;
 $text-light: #c4d4db;
+$text-lighter: #f3f6f8;
 $text-black: #1d1d1d;
 
 /* fonts */
