wip: testing new colors + section component

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,11 +10,10 @@ $xl: 1280px;
 $xxl: 1920px;
 
 /* colors */
-$green-light: #13736a;
-$green-dark: #082e2a;
-$green-extra-dark: #072926;
-$text-light: #c4d4db;
-$text-lighter: #f3f6f8;
+$main: #12736a;
+$main-dark: #041816;
+$main-light: #bfc2da;
+$text-light: #f7f7f7;
 $text-black: #1d1d1d;
 
 /* fonts */
