--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,11 +10,12 @@ $xl: 1280px;
 $xxl: 1920px;
 
 /* colors */
-$main: #12736a;
-$main-dark: #041816;
-$main-light: #bfc2da;
+$main: #008a5a;
+$main-dark: #262873;
+$footer: #015938;
+$main-light: #97d4b7;
 $text-light: #f7f7f7;
-$text-black: #1d1d1d;
+$text-dark: #1d1d1d;
 
 /* fonts */
 $font-primary: 'Poppins', sans-serif;
