support custom components in all routes

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -12,8 +12,10 @@ $xxl: 1920px;
 /* colors */
 $main: #008a5a;
 $main-dark: #262873;
+$main-extra-dark: #0b0b20;
 $footer: #015938;
-$main-light: #97d4b7;
+$main-light: #c0e5d3;
+$main-extra-light: #e5f5ed;
 $text-light: #f7f7f7;
 $text-dark: #1d1d1d;
 
