restructuring + style edits

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,13 +11,26 @@ $xxl: 1920px;
 
 /* colors */
 $main: #008a5a;
-$main-dark: #262873;
-$main-extra-dark: #0b0b20;
-$footer: #015938;
+$main-dark: #015938;
 $main-light: #c0e5d3;
 $main-extra-light: #e5f5ed;
+$secondary: #4956ab;
+$secondary-light: #7e89c4;
+$secondary-dark: #3a4495;
+$secondary-extra-dark: #0b0b20;
 $text-light: #f7f7f7;
 $text-dark: #1d1d1d;
 
 /* fonts */
 $font-primary: 'Poppins', sans-serif;
+$font-primary-header: 'Lato', sans-serif;
+
+/* font sizes */
+$font-size-0: 72px;
+$font-size-1: 42px;
+$font-size-2: 30px;
+$font-size-3: 26px;
+$font-size-4: 20px;
+$font-size-5: 16px;
+$font-size-6: 14px;
+$font-size-7: 13px;
