--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -22,8 +22,9 @@ $text-light: #f7f7f7;
 $text-dark: #1d1d1d;
 
 /* fonts */
+
 $font-primary: 'Poppins', sans-serif;
-$font-primary-header: 'Lato', sans-serif;
+$font-primary-header: 'Chivo Mono', monospace;
 
 /* font sizes */
 $font-size-0: 48px;
