updated header font

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -24,7 +24,7 @@ $text-dark: #1d1d1d;
 /* fonts */
 
 $font-primary: 'Poppins', sans-serif;
-$font-primary-header: 'Chivo Mono', monospace;
+$font-primary-header: 'Josefin Sans', sans-serif;
 
 /* font sizes */
 $font-size-0: 48px;
