--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -11,15 +11,16 @@ $xxl: 1920px;
 
 /* colors */
 $main: #008a5a;
-$main-dark: #015938;
+$main-dark: #2d6451;
 $main-light: #c0e5d3;
-$main-extra-light: #e5f5ed;
-$secondary: #4956ab;
-$secondary-light: #7e89c4;
-$secondary-dark: #3a4495;
+$main-extra-light: #fbfaf7;
+//$secondary: #00758a;
+// $secondary-light: #7e89c4;
+$secondary-extra-light: #cfdee3;
+// $secondary-dark: #00758a;
 $secondary-extra-dark: #0b0b20;
-$text-light: #f7f7f7;
-$text-dark: #1d1d1d;
+$text-light: #fefdfa;
+$text-dark: #211f1c;
 
 /* fonts */
 
